--- a/tutorials/reading_posterior_samples_tutorial.ipynb
+++ b/tutorials/reading_posterior_samples_tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Reading and plotting `bilby` posterior samples\n",
     "\n",
-    "In this tutorial, we will read `bilby` posterior samples for one of the gravitational-wave events contained within this repository. We're going to show GW170719 as an example, but this tutorial will work for any of the events. We will demonstrate the reading of each kind of results file provided."
+    "In this tutorial, we will read `bilby` posterior samples for one of the gravitational-wave events contained within this repository. We're going to show GW170729 as an example, but this tutorial will work for any of the events. We will demonstrate the reading of each kind of results file provided."
    ]
   },
   {
@@ -59,7 +59,7 @@
     "## Example 1: Reading `.dat`\n",
     "This kind of file contains only the posterior samples for the event.\n",
     "\n",
-    "First, we need to read in the data file."
+    "First, we need to read in the data file. For this, you will need to [download the posterior samples](https://dcc.ligo.org/LIGO-P2000193)."
    ]
   },
   {
@@ -149,7 +149,7 @@
     "## Example 2: Reading `.json`\n",
     "This kind of file contains lots of different data about the analysis. It includes information about the priors and the parameters that were sampled in, as well as the posterior samples.\n",
     "\n",
-    "Again, the first step is to read in the data file. We can read it directly into a bilby result object."
+    "Again, the first step is to read in the data file. For this, you will need to [download the bilby results files](https://dcc.ligo.org/LIGO-P2000193). We can read it directly into a bilby result object. "
    ]
   },
   {
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file = \"../gwtc-1_analysis_results/downsampled_bilby_result_files/GW170729_downsampled_result.json\"\n",
+    "data_file = \"../gwtc-1_analysis_results/bilby_result_files/GW170729_result_file.json\"\n",
     "bilby_result = bilby.gw.result.CBCResult.from_json(data_file)"
    ]
   },
